--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,19 +5,28 @@
     'Ubuntu Monospace', 'Source Code Pro', 'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 }
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  font-family: 'Noto Sans JP', sans-serif;
+  font-weight: 300;
+  font-size: 1rem;
+  overflow-x: hidden;
+  /* border: 1px solid blue; */
+}
+
+body {
+  min-width: 100vw;
+  min-height: 100vh;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
 }
 
 a {
