--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,7 +23,7 @@
   font-weight: 300;
   font-size: 1rem;
   overflow-x: hidden;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
 
 body {
